# code-butler

./: .gitignore  .mdl_style.rb  .mergify.yml  .pre-commit-config.yaml  HISTORY.md  README.md  hatch.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yaml
src/code_butler/: __main__.py
src/code_butler/cli/: __init__.py  application.py  console.py
src/code_butler/cli/config/: __init__.py  edit.py  explore.py  find.py  restore.py  set.py  show.py
src/code_butler/cli/run/: __init__.py
src/code_butler/config/: config.py  console.py  file.py  github.py
src/code_butler/rules/: __init__.py  issue.py  rule.py  rule_group.py
src/code_butler/rules/common/: rule.py  search_replace_rule.py
src/code_butler/rules/github/: deprecated_commands.py  save_state.py  set_output.py
tests/: conftest.py
tests/cli/: test_application.py
tests/cli/config/: test_edit.py  test_explore.py  test_find.py  test_restore.py  test_set.py  test_show.py
tests/config/: test_config.py  test_console.py  test_file.py  test_github.py
tests/rules/: test_issue.py  test_rule.py  test_rule_group.py
tests/rules/common/: test_search_and_replace_rule.py
tests/rules/github/: test_deprecated_commands.py  test_save_state.py  test_set_output.py
